# UGAssistant

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
config/: app.yaml  models.lock.yaml  runtimes.lock.yaml
deploy/: ugassistant-kiosk.desktop.template  ugassistant.service.template
scripts/: build_windows_launcher.ps1  check_audio.py  check_camera.py  check_hardware.py  check_stt.py  download_models.py  install_piper.py  install_raspberry_autostart.sh  install_whisper.py  open_launcher_windows.ps1  run_raspberry.sh  run_windows.ps1  setup_raspberry.sh  setup_windows.ps1  windows_launcher.py
src/ugassistant/: config.py  (+2 more)
tests/: test_application_updates.py  test_audio_pcm.py  test_audio_service.py  test_audio_state_integration.py  test_avatar_state_styles.py  test_camera_service.py  test_combined_gestures.py  test_conversation_service.py  test_finger_count.py  test_fixed_model_updates.py  test_hand_perception.py  test_iot_api.py  test_lip_sync.py  test_mobile_access.py  test_model_updates.py  test_ollama_adapter.py  test_opencv_camera.py  test_piper_tts.py  test_platform.py  test_portaudio.py  test_preference_restart.py  test_preferences.py  test_recognition_api.py  test_recognition_service.py  test_shutdown_api.py  test_silence_gesture.py  test_simulated_adapters.py  test_sound_activity.py  test_speech_service.py  test_spotify_adapter.py  test_spotify_api.py  test_spotify_service.py  test_state_machine.py  test_stt_configuration.py  test_timers.py  test_tts_configuration.py  test_voice_assistant.py  test_whisper_cpp_stt.py
(+57 files in other folders)
