[project]
name = "ugassistant"
version = "0.7.0"
description = "Asistente multimodal local para Windows y Raspberry Pi."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100",
  "uvicorn>=0.23",
  "websockets==16.1",
  "PyYAML>=6.0",
  "opencv-python-headless==4.13.0.92",
  "cv2-enumerate-cameras==1.3.3",
  "sounddevice==0.5.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
